# bench-sign

./: README.md  bench.py  bench.sh  bench_signature.py  bench_signing.py  clean.sh  compile.sh  gmon.out  todo.md
cross/Additional_Implementations/Benchmarking/: log.txt
cross/Optimized_Implementation/lib/: fips202x4.c
faest/faest_128f/: Makefile  Makefile.backup
faest/faest_128f/bench/: bench.c
faest/faest_em_128f/: Makefile
faest/faest_em_128s/bench/: bench.c
less/Optimized_Implementation/avx2/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
less/Reference_Implementation/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LESS_benchmark_cat_252_192  LESS_benchmark_cat_252_45  LESS_benchmark_cat_252_68  LESS_benchmark_cat_400_102  LESS_benchmark_cat_400_220  LESS_benchmark_cat_548_137  LESS_benchmark_cat_548_345  LESS_nist_cat_252_192  LESS_nist_cat_252_45  LESS_nist_cat_252_68  LESS_nist_cat_400_102  LESS_nist_cat_400_220  LESS_nist_cat_548_137  LESS_nist_cat_548_345  LESS_test_cat_252_192  LESS_test_cat_252_45  LESS_test_cat_252_68  LESS_test_cat_400_102  LESS_test_cat_400_220  LESS_test_cat_548_137  LESS_test_cat_548_345  Makefile  cmake_install.cmake
less/Utilities/Benchmarking/: CMakeLists.txt
mirath/full/mirath_v2.0.1/: README
mirath/full/mirath_v2.0.1/Optimized_Implementation/mirath_tcith/mirath_tcith_3b_fast/: CMakeLists.txt  main.c
mirath/full/mirath_v2.0.1/Optimized_Implementation/mirath_tcith/mirath_tcith_3b_fast/optimized/avx2/arith/: ff.h  vector_ff_mu.h
mirath/full/mirath_v2.0.1/Reference_Implementation/mirath_tcith/mirath_tcith_1a_fast/: CMakeLists.txt
mirath/full/mirath_v2.0.1/Reference_Implementation/mirath_tcith/mirath_tcith_1a_fast/reference/arith/: data_type.h  ff.h  matrix_ff_arith.h
mirath/mirath_tcith_1a_fast/: CMakeLists.txt  bench.c  main.c  mirath_parameters.h  sign.c
mirath/mirath_tcith_1a_fast/tcith/: mirath_verify.h
mirath/mirath_tcith_1a_short/: CMakeLists.txt
mirath/mirath_tcith_1a_short/common/: hash_sha3.h
mirath/mirath_tcith_1a_short/tcith/: mirath_tcith.c
mirath/mirath_tcith_1b_fast/: CMakeLists.txt  bench.c
mirath/mirath_tcith_1b_short/: CMakeLists.txt  mirath_matrix_ff.c
mqom/: Makefile  README.md  api.h  bench.c  benchmark.h  blc.c  blc.h  expand_mq.c  fields.h  ggm_tree.c  ggm_tree.h  keygen.c  manage.py  mqom2_parameters.h  piop.c  piop_cache.h  prg.c  prg.h  prg_cache.h  sign.c  xof.h
mqom/benchmark/: bench.c  bench_mem_keygen.c  bench_mem_open.c  bench_mem_sign.c  timing.c  timing.h  utils.h
mqom/fields/: fields_avx2.h  fields_gfni.h
mqom/rijndael/: rijndael.h  rijndael_aes_ni.c  rijndael_ct64.c  rijndael_ct64.h  rijndael_ct64_enc.h  rijndael_platform.h  rijndael_ref.c  rijndael_ref.h  rijndael_table.c
mqom/sha3/: Makefile
perk/perk-128-fast-3/: Makefile
perk/perk-128-fast-3/src/: bench.c
perk/perk-128-fast-5/: Makefile
perk/perk-128-short-3/: Makefile
perk/perk-128-short-5/: Makefile
ryde/full/ryde_v2.0.1/: README
ryde/full/ryde_v2.0.1/Optimized_Implementation/ryde1s/src/field/: CMakeLists.txt  field_53.h
ryde/full/ryde_v2.0.1/Optimized_Implementation/ryde3f/: CMakeLists.txt  README.md
ryde/full/ryde_v2.0.1/Optimized_Implementation/ryde3f/src/: parameters.h  seed_expand_rijndael.h
ryde/full/ryde_v2.0.1/Optimized_Implementation/ryde3f/src/field/: field_61.h
ryde/full/ryde_v2.0.1/Optimized_Implementation/ryde3f/src/optimized/avx/: field_ur_61.h
ryde/full/ryde_v2.0.1/Optimized_Implementation/ryde3s/example/: CMakeLists.txt
ryde/full/ryde_v2.0.1/Reference_Implementation/ryde1f/bench/: CMakeLists.txt
ryde/full/ryde_v2.0.1/Reference_Implementation/ryde5f/src/: CMakeLists.txt  field.h  field_vector.h
ryde/full/ryde_v2.0.1/Reference_Implementation/ryde5f/src/field/: field_67.c
ryde/full/ryde_v2.0.1/Reference_Implementation/ryde5f/src/reference/: field_ur_67.h
ryde/ryde1f/bench/: CMakeLists.txt
ryde/ryde1f/nist/: PQCgenKAT_sign.c  sign.c
ryde/ryde1f/src/: field.h  field_matrix.c  parameters.h  tcith_sign.c
ryde/ryde1s/nist/: CMakeLists.txt  api.h
sdith/sdith_hypercube_cat1_gf256/: sign
sdith/sdith_hypercube_cat1_p251/: bench.c  sign
sdith/sdith_threshold_cat1_gf256/: Makefile
sdith/sdith_threshold_cat1_p251/: Makefile  bench.c
speck/: CMakeLists.txt
speck/.cache/clangd/index/: KAT_NIST_rng.c.388DE6E174A45B4B.idx  KAT_NIST_rng.c.4461720A880B7D40.idx  KAT_NIST_rng.c.B671AB7E3EB2D42F.idx  KAT_NIST_rng.h.2740D9E283264831.idx  KAT_NIST_rng.h.C29AA84B1E25BF5D.idx  KAT_NIST_rng.h.DF6B83F1EEB87532.idx  PQCgenKAT_sign.c.5BF5BCF21E7A8A00.idx  PQCgenKAT_sign.c.972D4BE7E8A03056.idx  PQCgenKAT_sign.c.D4736C2834119257.idx  SPECK.c.455BAB428059055E.idx  SPECK.c.865A9D32D07A8BB5.idx  SPECK.c.8BB1642580496D60.idx  SPECK.h.10A40B1E8359E731.idx  SPECK.h.5FF6D4316C4C4F69.idx  SPECK.h.78652F15782915F4.idx  api.h.098F8087750D25B0.idx  api.h.689FE2414BDCC26D.idx  api.h.CC344AA9C882B181.idx  codes.c.1B88A53A5762972D.idx  codes.c.9BA5812A2412C70E.idx  codes.c.DB876C3997C43911.idx  codes.h.0658442B66591523.idx  codes.h.421ACDCE68F124D6.idx  codes.h.8AA88D2D57D66D1D.idx  cycles.h.00CA82AF4CD96D56.idx  cycles.h.56372ED146F74C3E.idx  cycles.h.AF32794593AAD6FD.idx  fips202.c.110DAF25319B72FA.idx  fips202.c.BFBD8B797276E466.idx  fips202.c.F4391FB1A608CCBB.idx  fips202.h.20D130A048A2D288.idx  fips202.h.5BE27FB0B2AD1A12.idx  fips202.h.7AEE74EC0E5CF801.idx  fq_arith.h.521EAD2304638682.idx  fq_arith.h.A2B9AB1F355DDB61.idx  fq_arith.h.BC39411564853C91.idx  keccakf1600.c.4455AE4ACBDDED6B.idx  keccakf1600.c.B7DD6739CE6913F3.idx  keccakf1600.c.ED648B168291C572.idx  keccakf1600.h.6B6DE71716AFD319.idx  (+59 more)
speck/include/: SPECK.h  api.h  codes.h  fq_arith.diff  fq_arith.h  fq_arith_opt.h  fq_arith_ref.h  parameters.h  permutation.h  rng.h  seedtree.h  sort.h  utils.h
speck/lib/: SPECK.c  codes.c  codes.diff  permutation.c  rng.c  seedtree.c  sign.c  sort.c
speck/lib/bench/: speck_benchmark.c
speck/lib/nist/: PQCgenKAT_sign.c
speck/lib/test/: sort.c  speck_test.c  test_antiorthogonal.c  test_helpers.c  test_helpers.h
(+391 files in other folders)
